fix: page changed

--- a/front/src/app/Interfaces/page/page.component.html
+++ b/front/src/app/Interfaces/page/page.component.html
@@ -1,9 +1,16 @@
 <div class="container">
     <h1>Bem-vindo(a) à Página de Influenciadores</h1>
-    <p>Aqui você pode fazer o cadastro ou login.</p>
-    <div class="button-container">
-      <button class="button" (click)="irParaCadastro()">Cadastro</button>
-      <button class="button" (click)="irParaLogin()">Login</button>
+    <div class="data-list">
+      <h2>Lista de Influenciadores</h2>
+  
+      <ul>
+        <li>
+          {{ influenciador.nome }} - {{ influenciador.quantidadeInscritos }} inscritos
+          <button>Editar</button>
+        </li>
+      </ul>
     </div>
+  
+    <button class="button" (click)="irParaCadastro()">Cadastro</button>
   </div>
   
