--- a/front/src/app/Interfaces/login/login.component.html
+++ b/front/src/app/Interfaces/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="login-container">
+  <h2>Login</h2>
+  <form [formGroup]="loginForm" (ngSubmit)="fazerLogin()">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" formControlName="email" required>
+    </div>
+
+    <div class="form-group">
+      <label for="senha">Senha:</label>
+      <input type="password" id="senha" formControlName="senha" required>
+    </div>
+
+    <button type="submit">Entrar</button>
+  </form>
+</div>
