--- a/front/src/app/Interfaces/register/register.component.html
+++ b/front/src/app/Interfaces/register/register.component.html
@@ -1,39 +1,19 @@
 <form [formGroup]="cadastroForm" (ngSubmit)="cadastrarPessoa()" class="cadastro-form">
-    <button type="button" class="btn-login" (click)="fazerLogin()">Login</button>
-    
-    <div class="form-group">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" formControlName="nome" class="form-control">
-    </div>
-  
-    <div class="form-group">
-      <label for="quantidadeInscritos">Quantidade de Inscritos:</label>
-      <input type="number" id="quantidadeInscritos" formControlName="quantidadeInscritos" class="form-control">
-    </div>
-  
-    <div class="form-group">
-      <label for="canal">Canal:</label>
-      <input type="text" id="canal" formControlName="canal" class="form-control">
-    </div>
-  
-    <div class="form-group">
-      <label for="plataforma">Plataforma:</label>
-      <input type="text" id="plataforma" formControlName="plataforma" class="form-control">
-    </div>
-  
-    <div class="form-group">
-      <label for="categoriaConteudo">Categoria do Conteúdo:</label>
-      <select id="categoriaConteudo" formControlName="categoriaConteudo" class="form-control">
-        <option value="" disabled selected>Selecione uma categoria</option>
-        <option value="Vlog">Vlog</option>
-        <option value="Review">Review</option>
-        <!-- Adicione mais opções de categoria aqui, se necessário -->
-      </select>
-    </div>
-  
-    <div class="button-container">
-      <button type="submit" class="btn-submit">Cadastrar</button>
-      <button type="button" class="btn-voltar" (click)="voltarPagina()">Voltar</button>
-    </div>
-  </form>
-  
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input type="email" id="email" formControlName="email" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="nome">Nome de Login:</label>
+    <input type="text" id="nome" formControlName="nome" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="senha">Senha:</label>
+    <input type="password" id="senha" formControlName="senha" class="form-control">
+  </div>
+
+  <button type="submit" class="btn-submit">Cadastrar</button>
+  <button type="button" class="btn-voltar" (click)="voltarPagina()">Voltar</button>
+</form>
