fix: new interface to login

--- a/front/src/app/Interfaces/login/login.component.html
+++ b/front/src/app/Interfaces/login/login.component.html
@@ -13,4 +13,34 @@
 
     <button type="submit">Entrar</button>
   </form>
+  <div class="login-info">
+    <h3>Acessos</h3>
+  
+    <table>
+      <tr>
+        <th colspan="2">Com acesso avançado ao site</th>
+      </tr>
+      <tr>
+        <td>Email:</td>
+        <td>ellen.samanta@outlook.com</td>
+      </tr>
+      <tr>
+        <td>Senha:</td>
+        <td>123</td>
+      </tr>
+  
+      <tr>
+        <th colspan="2">Sem acesso avançado ao site</th>
+      </tr>
+      <tr>
+        <td>Email:</td>
+        <td>carlos.silva@hotmail.com</td>
+      </tr>
+      <tr>
+        <td>Senha:</td>
+        <td>321</td>
+      </tr>
+    </table>
+  </div>
+  
 </div>
