--- a/front/src/app/Interfaces/login/login.component.css
+++ b/front/src/app/Interfaces/login/login.component.css
@@ -1,40 +1,88 @@
 .login-container {
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-  }
-  
-  h2 {
-    text-align: center;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
+  background-image: url('../../../assets/imagens/nature-mountain-background-wallpaper-2560x720_72.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(156, 54, 7);
+  text-align:left;
+  margin: 0;
+  padding: 0;
+}
+
+.login-container h2 {
+  margin-bottom: 20px;
+}
+
+.login-container form {
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.login-container form .form-group {
+  margin-bottom: 10px;
+}
+
+.login-container form label {
+  display: block;
+}
+
+.login-container form input[type="email"],
+.login-container form input[type="password"] {
+  width: 100%;
+  padding: 5px;
+  border: none;
+  border-radius: 3px;
+}
+
+.login-container form button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.login-info {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.login-info h2 {
+  margin-bottom: 10px;
+}
+
+.login-info table {
+  width: 300px;
+  margin: 0 auto;
+  border-collapse: collapse;
+  background-color: #f9f9f9;
+}
+
+.login-info th,
+.login-info td {
+  padding: 8px;
+}
+
+.login-info th {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+}
+
+.login-info td {
+  border-bottom: 1px solid #ddd;
+}
+
+.login-info tr:last-child td {
+  border-bottom: none;
+}
+h3{
+  color:rgb(255, 249, 249)
+}
