--- a/front/src/app/Interfaces/dashboard/list/list-influencers.component.html
+++ b/front/src/app/Interfaces/dashboard/list/list-influencers.component.html
@@ -1,33 +1,97 @@
-<div class="filter-container">
-    <form [formGroup]="filtroForm" (ngSubmit)="filtrarRegistros()">
-      <div class="form-group">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" formControlName="nome" class="form-control">
-      </div>
-  
-      <div class="form-group">
-        <label for="categoria">Categoria:</label>
-        <select id="categoria" formControlName="categoria" class="form-control">
-          <option value="" disabled selected>Selecione uma categoria</option>
-          <option value="Vlog">Vlog</option>
-          <option value="Review">Review</option>
-        </select>
-      </div>
-  
-      <div class="form-group">
-        <label for="inscritos">Número de Inscritos:</label>
-        <input type="number" id="inscritos" formControlName="inscritos" class="form-control">
-      </div>
-  
-      <button type="submit" class="btn-filter">Filtrar</button>
-      <button type="button" class="btn-reset" (click)="resetFiltro()">Limpar Filtro</button>
-    </form>
-  </div>
-  
-  <div class="registros-container">
-    <h2>Registros</h2>
-    <ul>
-      <li *ngFor="let registro of registros">{{ registro.nome }} - {{ registro.categoria }} - {{ registro.inscritos }}</li>
-    </ul>
-  </div>
-  
+<div class="filtro-container">
+  <h2>Filtro</h2>
+  <form [formGroup]="filtroForm" (ngSubmit)="filtrarRegistros()">
+    <div class="form-group">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" formControlName="nome" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="quantidadeInscritos">Quantidade de Inscritos:</label>
+      <input type="number" id="quantidadeInscritos" formControlName="quantidadeInscritos" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="categoriaConteudo">Categoria do Conteúdo:</label>
+      <select id="categoriaConteudo" formControlName="categoriaConteudo" class="form-control">
+        <option value="" disabled selected>Selecione uma categoria</option>
+        <option value="Vlog">Vlog</option>
+        <option value="Review">Review</option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn-submit">Filtrar</button>
+    <button type="button" (click)="resetFiltro()">Limpar Filtro</button>
+  </form>
+</div>
+
+<div class="registros-container" *ngIf="mostrarRegistrosFiltrados">
+  <h2>Registros Filtrados</h2>
+  <!-- Tabela de registros filtrados -->
+  <table>
+    <!-- Cabeçalho da tabela -->
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Categoria</th>
+        <th>Inscritos</th>
+        <th *ngIf="isUserAuthorized() && isEllenUser && !isCarlosUser">Ações</th>
+      </tr>
+    </thead>
+    <!-- Corpo da tabela -->
+    <tbody>
+      <tr *ngFor="let registro of registrosFiltrados">
+        <td>{{ registro.nome }}</td>
+        <td>{{ registro.categoriaConteudo }}</td>
+        <td>{{ registro.quantidadeInscritos }}</td>
+        <td *ngIf="isUserAuthorized() && isEllenUser && !isCarlosUser">
+          <button type="button" class="editar" (click)="editarRegistro(registro)">Editar</button>
+          <button type="button" class="deletar" (click)="apagarRegistro(registro._id)">Apagar</button>          
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
+<div class="registros-container">
+  <h2>Registros</h2>
+  <!-- Tabela de registros -->
+  <table>
+    <!-- Cabeçalho da tabela -->
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Categoria</th>
+        <th>Inscritos</th>
+        <th *ngIf="isUserAuthorized() && isEllenUser && !isCarlosUser">Ações</th>
+      </tr>
+    </thead>
+    <!-- Corpo da tabela -->
+    <tbody>
+      <tr *ngFor="let registro of registros">
+        <td>{{ registro.nome }}</td>
+        <td>{{ registro.categoriaConteudo }}</td>
+        <td>{{ registro.quantidadeInscritos }}</td>
+        <td *ngIf="isUserAuthorized() && isEllenUser && !isCarlosUser">
+          <button type="button" class="editar" (click)="editarRegistro(registro)">Editar</button>
+          <button type="button" class="deletar" (click)="apagarRegistro(registro._id)">Apagar</button>          
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<form [formGroup]="editForm" id="editForm" *ngIf="registroSelecionado" (ngSubmit)="updatePerson()">
+            <!-- Campos do formulário de edição -->
+            <label for="nomeEdit">Nome:</label>
+            <input type="text" id="nomeEdit" formControlName="nome">
+
+            <label for="categoriaEdit">Categoria:</label>
+            <input type="text" id="categoriaEdit" formControlName="categoriaConteudo">
+
+            <label for="inscritosEdit">Inscritos:</label>
+            <input type="text" id="inscritosEdit" formControlName="quantidadeInscritos">
+
+            <button type="submit">Salvar</button>
+</form>
