--- a/front/src/app/Interfaces/dashboard/create/create-influencers.component.html
+++ b/front/src/app/Interfaces/dashboard/create/create-influencers.component.html
@@ -1,5 +1,6 @@
-<form [formGroup]="cadastroForm" (ngSubmit)="cadastrarPessoa()" class="cadastro-form">
-    
+<div class="container">
+  <h2>Cadastro de Influenciadores</h2>
+  <form [formGroup]="cadastroForm" (ngSubmit)="cadastrarPessoa()" class="cadastro-form">
     <div class="form-group">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" formControlName="nome" class="form-control">
@@ -20,18 +21,19 @@
       <input type="text" id="plataforma" formControlName="plataforma" class="form-control">
     </div>
   
-    <div class="form-group">
-      <label for="categoriaConteudo">Categoria do Conteúdo:</label>
-      <select id="categoriaConteudo" formControlName="categoriaConteudo" class="form-control">
-        <option value="" disabled selected>Selecione uma categoria</option>
-        <option value="Vlog">Vlog</option>
-        <option value="Review">Review</option>
-        <!-- Adicione mais opções de categoria aqui, se necessário -->
-      </select>
-    </div>
+<div class="form-group">
+  <label for="categoria">Categoria do Conteúdo:</label>
+  <select id="categoria" formControlName="categoria" class="form-control">
+    <option value="" disabled selected>Selecione uma categoria</option>
+    <option value="Vlog">Vlog</option>
+    <option value="Review">Review</option>
+    <!-- Adicione mais opções de categoria aqui, se necessário -->
+  </select>
+</div>
+
   
     <div class="button-container">
       <button type="submit" class="btn-submit">Cadastrar</button>
     </div>
   </form>
-  
+</div>
