fix: added interface only  specific user

--- a/front/src/app/Interfaces/dashboard/menu/dashboardtemplate.component.html
+++ b/front/src/app/Interfaces/dashboard/menu/dashboardtemplate.component.html
@@ -1,3 +1,10 @@
-<app-list-influencers/>
-<app-create-influencers/>
-<app-edit-influencers/>
+<ng-container *ngIf="isEllenUser; else carlosUser">
+    <app-create-influencers></app-create-influencers>
+    <app-list-influencers></app-list-influencers>
+
+  </ng-container>
+  
+  <ng-template #carlosUser>
+    <app-list-influencers></app-list-influencers>
+  </ng-template>
+  
