--- a/front/src/app/Interfaces/dashboard/list/list-influencers.component.css
+++ b/front/src/app/Interfaces/dashboard/list/list-influencers.component.css
@@ -86,3 +86,29 @@
   background-color: red;
   color: white;
 }
+#editForm .form-group {
+  margin-bottom: 20px;
+}
+
+#editForm label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#editForm input[type="text"],
+#editForm input[type="number"] {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+#editForm .btn-submit {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
