fix: image added on page

--- a/front/src/app/Interfaces/page/page.component.css
+++ b/front/src/app/Interfaces/page/page.component.css
@@ -1,5 +1,6 @@
 .container {
     text-align: center;
+    background-image: url('../../../assets/paisagens-natureza-mar-montanhas-rochosas-imagem-de-fundo.jpg');
     margin-top: 100px;
   }
   
