--- a/front/src/app/Interfaces/page/page.component.css
+++ b/front/src/app/Interfaces/page/page.component.css
@@ -1,8 +1,20 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
-    text-align: center;
-    background-image: url('../../../assets/paisagens-natureza-mar-montanhas-rochosas-imagem-de-fundo.jpg');
-    margin-top: 100px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  background-image: url('../../../assets/paisagens-natureza-mar-montanhas-rochosas-imagem-de-fundo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
   
   .button-container {
     margin-top: 20px;
@@ -21,4 +33,6 @@
   .button:hover {
     background-color: #0056b3;
   }
-  
+  h1,p{
+    color: #fff;
+  }
